Change: run_docker in rworkflows to trigger Docker build

--- a/.github/workflows/rworkflows.yml
+++ b/.github/workflows/rworkflows.yml
@@ -48,6 +48,6 @@ jobs:
         has_runit: ${{ false }}
         has_latex: ${{ false }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run_docker: ${{ false }}
+        run_docker: ${{ true }}
         runner_os: ${{ runner.os }}
         cache_version: cache-v1
