halfway point readability improvement

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -82,6 +82,18 @@ Suggests:
     corpcor, 
     circlize, 
     BiocBook
+    BiocManager
+    stats
+    reshape2
+    devtools
+    NetCoMi
+    SpiecEasi
+    SPRING
+    RColorBrewer
+    factoextra
+    grid
+    cluster
+    dada2
 Remotes:
     github::microbiome/miaTime
 VignetteBuilder: knitr
