added p-value correction for geom_signif

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,7 +81,19 @@ Suggests:
     igraph, 
     corpcor, 
     circlize, 
-    BiocBook
+    BiocBook,
+    BiocManager,
+    stats,
+    reshape2,
+    devtools,
+    NetCoMi,
+    SpiecEasi,
+    SPRING,
+    RColorBrewer,
+    factoextra,
+    grid,
+    cluster,
+    dada2
 Remotes:
     github::microbiome/miaTime
 VignetteBuilder: knitr
