--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,6 @@ biocViews:
 Depends:
     R (>= 4.0.0)
 Imports:
-    mia
 Suggests:
     rebook, 
     glue, 
@@ -95,7 +94,8 @@ Suggests:
     cluster,
     dada2
 Remotes:
-    github::microbiome/miaTime
+    github::microbiome/miaTime,
+    github::microbiome/mia
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
 BiocType: Book
