Use mia from GH

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,6 @@ biocViews:
 Depends:
     R (>= 4.0.0)
 Imports:
-    mia
 Suggests:
     rebook, 
     glue, 
@@ -82,7 +81,8 @@ Suggests:
     circlize, 
     BiocBook
 Remotes:
-    github::microbiome/miaTime
+    github::microbiome/miaTime,
+    github::microbiome/mia
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
 BiocType: Book
