--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,50 +29,50 @@ Depends:
 Imports:
     mia
 Suggests:
-    rebook, 
-    glue, 
-    sessioninfo, 
-    miaTime, 
-    microbiomeDataSets,
-    microbiome,
-    curatedMetagenomicData, 
-    ggplot2, 
+    ALDEx2, 
+    ANCOMBC, 
+    ape, 
     BiocParallel, 
     Biostrings, 
-    phyloseq, 
-    gtools, 
-    purrr, 
-    vegan, 
-    fido,
-    rgl, 
-    plotly, 
-    knitr, 
-    dplyr, 
-    scales, 
-    DT, 
-    scater, 
     bluster, 
-    patchwork, 
-    miaViz, 
-    ggsignif, 
-    pheatmap, 
-    ape, 
-    ggtree, 
-    kableExtra, 
+    curatedMetagenomicData, 
+    dplyr, 
+    DT, 
+    fido,
     dendextend, 
+    ggplot2, 
+    ggsignif, 
+    ggtree, 
+    glue, 
+    gtools, 
+    knitr, 
+    miaTime, 
+    microbiome,
+    microbiomeDataSets,
+    miaViz, 
+    MLeval, 
+    patchwork, 
+    pheatmap, 
+    phyloseq, 
+    plotly, 
+    purrr, 
+    rebook, 
+    rgl, 
+    scales, 
+    scater, 
+    sessioninfo, 
+    vegan, 
+    kableExtra, 
     NbClust, 
     cobiclust, 
     biclust, 
-    ALDEx2, 
     tidyverse, 
-    ANCOMBC, 
     Maaslin2, 
     MicrobiomeStat, 
     GUniFrac, 
     randomcoloR,
     DirichletMultinomial, 
     mikropml,
-    MLeval, 
     sechm, 
     ggpubr, 
     stringr, 
@@ -82,6 +82,18 @@ Suggests:
     corpcor, 
     circlize, 
     BiocBook,
+    SuperLearner,
+    WGCNA,
+    reshape2,
+    gsEasy,
+    topGO,
+    caret,
+    multiview,
+    glmnet,
+    forcats,
+    ROCR,
+    MMUPHin,
+    cowplot    
     BiocManager,
     stats,
     reshape2,
