--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,18 +81,18 @@ Suggests:
     igraph, 
     corpcor, 
     circlize, 
-    BiocBook
-    BiocManager
-    stats
-    reshape2
-    devtools
-    NetCoMi
-    SpiecEasi
-    SPRING
-    RColorBrewer
-    factoextra
-    grid
-    cluster
+    BiocBook,
+    BiocManager,
+    stats,
+    reshape2,
+    devtools,
+    NetCoMi,
+    SpiecEasi,
+    SPRING,
+    RColorBrewer,
+    factoextra,
+    grid,
+    cluster,
     BiocBook,
     SuperLearner,
     WGCNA,
