--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,7 +92,7 @@ Suggests:
     forcats,
     ROCR,
     MMUPHin,
-    cowplot    
+    cowplot,
     BiocManager,
     stats,
     reshape2,
@@ -109,7 +109,7 @@ Remotes:
     github::microbiome/miaTime,
     github::microbiome/mia
 VignetteBuilder: knitr
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 BiocType: Book
 BiocBookTemplate: 1.0.5
 SystemRequirements: quarto
