Add Github packages to remotes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: OMA
 Title: Orchestrating Microbiome Analysis with Bioconductor
-Version: 0.98.17
+Version: 0.98.16
 Date: 2023-07-29
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut"),
@@ -97,9 +97,6 @@ Suggests:
     stats,
     reshape2,
     devtools,
-    NetCoMi,
-    SpiecEasi,
-    SPRING,
     RColorBrewer,
     factoextra,
     grid,
@@ -107,7 +104,10 @@ Suggests:
     dada2
 Remotes:
     github::microbiome/miaTime,
-    github::microbiome/mia
+    github::microbiome/mia,
+    github::zdk123/SpiecEasi,
+    github::stefpeschel/NetCoMi,
+    github::GraceYoon/SPRING
 VignetteBuilder: knitr
 RoxygenNote: 7.3.1
 BiocType: Book
