packages list updated and sorted

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,86 +28,82 @@ Depends:
     R (>= 4.0.0)
 Imports:
 Suggests:
-    ALDEx2, 
-    ANCOMBC, 
-    ape, 
-    BiocParallel, 
-    Biostrings, 
-    bluster, 
-    curatedMetagenomicData, 
-    dplyr, 
-    DT, 
-    fido,
-    dendextend, 
-    ggplot2, 
-    ggsignif, 
-    ggtree, 
-    glue, 
-    gtools, 
-    knitr, 
-    miaTime, 
-    microbiome,
-    microbiomeDataSets,
-    miaViz, 
-    MLeval, 
-    patchwork, 
-    pheatmap, 
-    phyloseq, 
-    plotly, 
-    purrr, 
-    rebook, 
-    rgl, 
-    scales, 
-    scater, 
-    sessioninfo, 
-    vegan, 
-    kableExtra, 
-    NbClust, 
-    cobiclust, 
-    biclust, 
-    tidyverse, 
-    Maaslin2, 
-    MicrobiomeStat, 
-    GUniFrac, 
-    randomcoloR,
-    DirichletMultinomial, 
-    mikropml,
-    sechm, 
-    ggpubr, 
-    stringr, 
-    ComplexHeatmap, 
-    reticulate,
-    igraph, 
-    corpcor, 
-    circlize, 
-    BiocBook,
-    SuperLearner,
-    WGCNA,
-    reshape2,
-    gsEasy,
-    topGO,
+	ALDEx2, 
+	ANCOMBC, 
+	ape, 
+	biclust, 
+	BiocBook,
+	BiocManager,
+	BiocParallel,
+	Biostrings, 	
+	bluster, 
     caret,
-    multiview,
-    glmnet,
-    forcats,
-    ROCR,
-    MMUPHin,
-    cowplot    
-    BiocManager,
-    stats,
-    reshape2,
-    devtools,
-    NetCoMi,
-    SpiecEasi,
-    SPRING,
-    RColorBrewer,
-    factoextra,
-    grid,
-    cluster,
-    dada2
+	circlize, 
+	cluster,
+	cobiclust, 
+	ComplexHeatmap, 
+	corpcor,
+    cowplot, 
+	curatedMetagenomicData, 
+	dada2,
+	dendextend, 
+	devtools,
+	DirichletMultinomial,
+	dplyr,	
+	DT,
+	factoextra,
+	forcats,
+	fido,
+	ggplot2, 
+	ggpubr, 
+	ggsignif, 
+	ggtree,
+	glmnet,	
+	glue, 
+	grid,
+	gsEasy,
+	GUniFrac,
+	igraph, 
+	kableExtra, 
+	knitr, 
+    Maaslin2,
+	miaTime, 
+	miaViz, 
+	microbiome, 
+	microbiomeDataSets,
+	MicrobiomeStat,
+	mikropml,	
+	MLeval,
+	MMUPHin,
+	multiview,
+	NbClust,
+	NetCoMi,
+	patchwork,
+	pheatmap, 
+	phyloseq, 
+	plotly, 
+	purrr, 
+	randomcoloR,
+	RColorBrewer,
+	rebook,
+	reshape2,
+	reticulate,
+	rgl,
+	ROCR,	
+	scales,
+	scater, 
+	sechm, 
+	sessioninfo,
+	SpiecEasi,
+	SPRING,
+	stats,
+	stringr, 
+	tidyverse,
+	topGO,
+	vegan
 Remotes:
     github::microbiome/miaTime,
-    github::microbiome/mia
+	github::microbiome/mia
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
 BiocType: Book
