packages list updated and sorted #420 (#434)
* Merge devel to master (#432)

* Conversion to BiocBook (#376)

* biocbook: add GHA workflows

* biocbook: move data to extdata

* biocbook: move general/figures to inst/pages/images

* biocbook: add vignettes

* biocbook: add book assets

* biocbook: update package files

* biocbook: purge un-necessary files

* biocbook: migrate Rmd to qmd and fix xrefs

* biocbook: fix aesthetics

* biocbook: add callout acknowledging miaverse in walcome page

* biocbook: improve README to include dev/author instructions

* biocbook: replace `js2264` by `microbiome`

* Add section on network learning (#303)

* Add section on network learning

* Update section on network learning

* Update network learning chapter

Make requested changes
Remove sections on network comparison

* Add network comparison chapter

* Update book.bib

* Update chapters on network learning and comparison

* biocbook: add `BiocBook` to `Suggests` for developers

* biocbook: transfer chaps 60/61 to inst/pages/

---------

Co-authored-by: Stefanie Peschel <stefpeschel@gmail.com>

* Revert "Conversion to BiocBook (#376)" (#378)

This reverts commit ff3fdb34c18ce57798125b5e9bf56e48b2d52ba3.

* Master (#381)

* Add section on network learning (#303)

* Add section on network learning

* Update section on network learning

* Update network learning chapter

Make requested changes
Remove sections on network comparison

* Add network comparison chapter

* Update book.bib

* Update chapters on network learning and comparison

* Update network chapter and contributors (#377)

- Reorder network learning chapter to be less nested
- Move network plots to analysis section
- Add contributors

* #355: Add new data resource (#370)

* #355: Add new data resource

Signed-off-by: Daena Rys <rysdaena8@gmail.com>

* Up

Signed-off-by: Daena Rys <rysdaena8@gmail.com>

* Up

Signed-off-by: Dae

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-5064-0928")),
       person("and others", "(see the full list of contributors)", 
              role = c("ctb"))
-	     )
+         )
 Description:
     This is a reference cookbook for **Microbiome Data Science** with 
     R and Bioconductor.
@@ -31,80 +31,76 @@ Suggests:
     ALDEx2, 
     ANCOMBC, 
     ape, 
-    BiocParallel, 
-    Biostrings, 
+    biclust, 
+    BiocBook,
+    BiocManager,
+    BiocParallel,
+    Biostrings,     
     bluster, 
+    caret,
+    circlize, 
+    cluster,
+    cobiclust, 
+    ComplexHeatmap, 
+    corpcor,
+    cowplot, 
     curatedMetagenomicData, 
-    dplyr, 
-    DT, 
-    fido,
+    dada2,
     dendextend, 
+    devtools,
+    DirichletMultinomial,
+    dplyr,    
+    DT,
+    factoextra,
+    forcats,
+    fido,
     ggplot2, 
+    ggpubr, 
     ggsignif, 
-    ggtree, 
+    ggtree,
+    glmnet,    
     glue, 
-    gtools, 
+    grid,
+    gsEasy,
+    GUniFrac,
+    igraph, 
+    kableExtra, 
     knitr, 
+    Maaslin2,
     miaTime, 
-    microbiome,
-    microbiomeDataSets,
     miaViz, 
-    MLeval, 
-    patchwork, 
+    microbiome, 
+    microbiomeDataSets,
+    MicrobiomeStat,
+    mikropml,    
+    MLeval,
+    MMUPHin,
+    multiview,
+    NbClust,
+    NetCoMi,
+    patchwork,
     pheatmap, 
     phyloseq, 
     plotly, 
     purrr, 
-    rebook, 
-    rgl, 
-    scales, 
-    scater, 
-    sessioninfo, 
-    vegan, 
-    kableExtra, 
-    NbClust, 
-    cobiclust, 
-    biclust, 
-    tidyverse, 
-    Maaslin2, 
-    MicrobiomeStat, 
-    GUniFrac, 
     randomcoloR,
-    DirichletMultinomial, 
-    mikropml,
-    sechm, 
-    ggpubr, 
-    stringr, 
-    ComplexHeatmap, 
+    RColorBrewer,
+    rebook,
+    reshape2,
     reticulate,
-    igraph, 
-    corpcor, 
-    circlize, 
-    BiocBook,
-    SuperLearner,
-    WGCNA,
-    reshape2,
-    gsEasy,
-    topGO,
-    caret,
-    multiview,
-    glmnet,
-    forcats,
-    ROCR,
-    MMUPHin,
-    cowplot    
-    BiocManager,
-    stats,
-    reshape2,
-    devtools,
-    NetCoMi,
+    rgl,
+    ROCR,    
+    scales,
+    scater, 
+    sechm, 
+    sessioninfo,
     SpiecEasi,
     SPRING,
-    RColorBrewer,
-    factoextra,
-    grid,
-    cluster,
-    dada2
+    stats,
+    stringr, 
+    tidyverse,
+    topGO,
+    vegan
 Remotes:
     github::microbiome/miaTime,
     github::microbiome/mia
