Fix book build (#433)
* Fix book build

* up

* up

* Add Github packages to remotes

* up

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,14 +92,11 @@ Suggests:
     forcats,
     ROCR,
     MMUPHin,
-    cowplot    
+    cowplot,
     BiocManager,
     stats,
     reshape2,
     devtools,
-    NetCoMi,
-    SpiecEasi,
-    SPRING,
     RColorBrewer,
     factoextra,
     grid,
@@ -107,9 +104,12 @@ Suggests:
     dada2
 Remotes:
     github::microbiome/miaTime,
-    github::microbiome/mia
+    github::microbiome/mia,
+    github::zdk123/SpiecEasi,
+    github::stefpeschel/NetCoMi,
+    github::GraceYoon/SPRING
 VignetteBuilder: knitr
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 BiocType: Book
 BiocBookTemplate: 1.0.5
 SystemRequirements: quarto
