Work on aesthetics of the book

--- a/inst/assets/_format.yml
+++ b/inst/assets/_format.yml
@@ -1,8 +1,10 @@
 format: 
   html:
     grid:
-      sidebar-width: 500px
-      body-width: 1000px
+      body-width: 900px
+      sidebar-width: 400px
+      margin-width: 0px
+      gutter-width: 10px
     theme: 
       - cosmo
       - assets/book.scss
@@ -10,6 +12,5 @@ format:
     highlight-style: atom-one
     code-link: true
     editor: visual
-    citation-location: margin
     bibliography: assets/bibliography.bib
     from: markdown+emoji
