--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -1,5 +1,25 @@
+language: 
+  search-box-placeholder: Search
 book:
   title: "Orchestrating Microbiome Analysis"
+  search: 
+    location: sidebar
+    type: textbox
+  navbar:
+    background: transparent
+    align: center
+    left:
+      - text : TEST
+        file: index.qmd
+      - icon: github
+        menu:
+          - text: Source Code
+            url:  https://github.com/microbiome/OMA/
+          - text: Browse version `devel`
+            url:  https://microbiome.github.io/OMA/docs/devel/
+      - icon: twitter
+        href: https://twitter.com
+    title: "Orchestrating Microbiome Analysis"
   chapters:
     - index.qmd
     - pages/01_intro.qmd
@@ -33,13 +53,6 @@ book:
     - pages/Session_info.qmd
   favicon: assets/favicon.png
   sidebar: 
-    tools:
-      - icon: git
-        menu:
-          - text: Source Code
-            url:  https://github.com/microbiome/OMA/
-          - text: Browse version `devel`
-            url:  https://microbiome.github.io/OMA/docs/devel/
     style: "docked"
     background: "light"
-    collapse-level: 5
+    collapse-level: 1
