modify link checker

--- a/.github/workflows/Link_checker.yml
+++ b/.github/workflows/Link_checker.yml
@@ -11,9 +11,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: gh-pages
 
       - name: Install Markdown link checker
         uses: lycheeverse/lychee-action@v1.2.0
         with:
           # Check links in Markdown files
-          args: --verbose --no-progress *.md
+          args: --verbose --no-progress docs/devel/pages/*.html
