modify link checker correction

--- a/.github/workflows/Link_checker.yml
+++ b/.github/workflows/Link_checker.yml
@@ -3,7 +3,7 @@ name: Link Checker
 on:
   schedule:
     # Scheduled to run every day at midnight
-    - cron: '0 * * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   check-links:
