test link checker correction

--- a/.github/workflows/Link_checker.yml
+++ b/.github/workflows/Link_checker.yml
@@ -23,6 +23,9 @@ jobs:
           # Loop through each HTML file
           for file in $html_files; do
             echo "Checking links in $file"
+            
+            # Extract URLs matching the specified pattern
+            pattern_links=$(grep -oP 'href="\K[^"]*' "$file"
 
             # Loop through each link matching the pattern
             for link in $pattern_links; do
