Add SuperLearner to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -98,7 +98,8 @@ Suggests:
     SpiecEasi,
     SPRING,
     stats,
-    stringr, 
+    stringr,
+    SuperLearner,
     tidyverse,
     topGO,
     vegan
