--- a/.github/workflows/Link_checker.yml
+++ b/.github/workflows/Link_checker.yml
@@ -34,7 +34,7 @@ jobs:
                 # Normalize the path to remove unwanted './' and excessive slashes
                 path="${link/.\//}"  # Removes './' from the path
                 path="${path#/}"     # Removes any leading slash
-                path="docs/devel/pages/$path"  # Prefix the base path
+                path="docs/devel/$path"  # Prefix the base path
 
                 # Normalize further to resolve any redundancy in path formation
                 path=$(echo $path | sed 's#//#/#g')  # Replaces '//' with '/'
