link checker correction new

--- a/.github/workflows/Link_checker.yml
+++ b/.github/workflows/Link_checker.yml
@@ -2,7 +2,7 @@ name: Link Checker
 
 on:
   schedule:
-    # Scheduled to run every day at midnight
+    # Scheduled to run every 5 minutes; adjust to '0 0 * * *' for once daily at midnight
     - cron: '*/5 * * * *'
 
 jobs:
