changed to GlobalPatterns data to have a colTree and rowTree

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,7 @@ Suggests:
     glue, 
     grid,
     gsEasy,
+    gtools,
     GUniFrac,
     igraph, 
     kableExtra, 
@@ -102,7 +103,8 @@ Suggests:
     SuperLearner,
     tidyverse,
     topGO,
-    vegan
+    vegan,
+    WGCNA
 Remotes:
     github::microbiome/mia,
     github::microbiome/miaTime,
