--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -6,7 +6,7 @@ book:
     - part: "OMA ecosystem"
       chapters:
         - pages/06_packages.qmd
-        # - pages/04_containers.qmd
+        - pages/04_containers.qmd
     - part: "Focus topics"
       chapters:
         - pages/10_manipulation.qmd
