Change: run Cachix build branches

--- a/.github/workflows/oma-dev-env.yml
+++ b/.github/workflows/oma-dev-env.yml
@@ -2,7 +2,7 @@ name: "Update cachix cache for Orchestrating Microbiome Analysis environment"
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ devel, nix ]
 jobs:
   r-update-cachix:
     runs-on: ubuntu-latest
