OMA-visual new palette color + display bugs fixed

--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -6,6 +6,7 @@ book:
     location: sidebar
     type: textbox
   navbar:
+    logo: "docs/pages/images/mia_logo.png"
     background: transparent
     align: center
     left:
@@ -19,6 +20,8 @@ book:
             url:  https://microbiome.github.io/OMA/docs/devel/
       - icon: twitter
         href: https://twitter.com
+    right:
+        - text: "Some features or pictures to make it less empty"
     title: "Orchestrating Microbiome Analysis"
   chapters:
     - index.qmd
