Run workflow on push to devel and release

--- a/.github/workflows/oma-dev-env.yml
+++ b/.github/workflows/oma-dev-env.yml
@@ -2,7 +2,9 @@ name: "Update cachix cache for Orchestrating Microbiome Analysis environment"
 
 on:
   push:
-    branches: [ devel, nix ]
+    branches:
+    - devel
+    - RELEASE_**
 jobs:
   r-update-cachix:
     runs-on: ubuntu-latest
