--- a/.github/workflows/oma_package.yml
+++ b/.github/workflows/oma_package.yml
@@ -6,7 +6,6 @@ on:
       - devel
     paths:
       - 'DESCRIPTION'
-      - '**.yml'
 
 permissions: write-all
 
@@ -14,8 +13,7 @@ jobs:
   extract_packages:
     runs-on: ubuntu-latest
     env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-
+      R_LIBS_USER: ${{ github.workspace }}/R/library
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -23,16 +21,26 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Cache R packages
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-r-${{ hashFiles('**/DESCRIPTION') }}
+          restore-keys: |
+            ${{ runner.os }}-r-
+
       - name: Install R dependencies
-        run: Rscript -e 'install.packages("stringi")' # Install any packages your script needs
+        run: Rscript -e 'if (!require("stringi", quietly = TRUE)) install.packages("stringi")'
 
       - name: Run extract_packages script
+        working-directory: ./oma_packages
         run: Rscript extract_packages.R
 
       - name: Commit and push changes
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          cd oma_packages
           git add oma_packages.csv
           git commit -m "Update oma_packages.csv" -a || echo "No changes to commit"
           git push origin || echo "No changes to commit"
