--- a/inst/assets/_format.yml
+++ b/inst/assets/_format.yml
@@ -4,8 +4,10 @@ format:
       sidebar-width: 500px
       body-width: 1000px
     theme: 
-      - cosmo
-      - assets/book.scss
+       light: cosmo
+        - assets/book.scss
+       dark: darkly
+        - assets/book.scss
     mainfont: "Atkinson Hyperlegible, sans-serif"
     highlight-style: atom-one
     code-link: true
