Test build package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ biocViews:
 Depends:
     R (>= 4.0.0)
 Imports:
+    feather
 Suggests:
     ALDEx2, 
     ANCOMBC, 
@@ -52,7 +53,6 @@ Suggests:
     dplyr,    
     DT,
     factoextra,
-    feather,
     forcats,
     fido,
     ggplot2, 
