--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,6 @@ biocViews:
 Depends:
     R (>= 4.0.0)
 Imports:
-    feather
 Suggests:
     ALDEx2, 
     ANCOMBC, 
@@ -53,6 +52,7 @@ Suggests:
     dplyr,    
     DT,
     factoextra,
+    feather,
     forcats,
     fido,
     ggplot2, 
