--- a/inst/assets/_format.yml
+++ b/inst/assets/_format.yml
@@ -1,10 +1,8 @@
 format: 
   html:
     grid:
-      body-width: 900px
       sidebar-width: 400px
-      margin-width: 0px
-      gutter-width: 10px
+      body-width: 1000px
     theme: 
       - cosmo
       - assets/book.scss
@@ -13,4 +11,5 @@ format:
     code-link: true
     editor: visual
     bibliography: assets/bibliography.bib
+    citation-location: margin
     from: markdown+emoji
