Possible fix for nix build

--- a/.github/workflows/oma_nix_dev.yml
+++ b/.github/workflows/oma_nix_dev.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - devel
     - RELEASE_**
+    - fix-nix
 jobs:
   r-update-cachix:
     runs-on: ubuntu-latest
@@ -27,5 +28,5 @@ jobs:
               nix-build
          fi
 
-    - run: nix-store -qR --include-outputs $(nix-instantiate ../cachix/default.nix) | cachix push oma
+    - run: nix-store -qR --include-outputs $(nix-instantiate ./cachix/default.nix) | cachix push oma
     - run: nix-shell --run "echo OK"
