Introductory worklow + workflow section in OMA

--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -46,6 +46,9 @@ book:
         - pages/MMUPHin_meta_analysis.qmd
         - pages/MSEA.qmd
         - pages/19_visualization_techniques.qmd
+    - part: "Workflows"
+      chapters:
+        - pages/Introductory-workflow/Introductory.qmd
     - part: "Training"
       chapters:
         - pages/80_training.qmd
