Fix some display bugs + dark mode

--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -6,12 +6,10 @@ book:
     location: sidebar
     type: textbox
   navbar:
-    logo: "docs/pages/images/mia_logo.png"
+    logo: "pages/images/mia_logo.png"
     background: transparent
     align: center
     left:
-      - text : TEST
-        file: index.qmd
       - icon: github
         menu:
           - text: Source Code
