Worflow translate in french and dutch

--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -49,6 +49,8 @@ book:
     - part: "Workflows"
       chapters:
         - pages/Introductory-workflow.qmd
+        - pages/Introductory-workflow-dutch-version.qmd
+        - pages/Introductory-workflow-french-version.qmd
     - part: "Training"
       chapters:
         - pages/80_training.qmd
